fixed issue when the Login was not centered

--- a/css/image.css
+++ b/css/image.css
@@ -1,8 +1,8 @@
 .imgLogin {
   position: absolute;
-    top: -48%;
-    right: -147%;
-    transform: translateY(-50%);
-    width: 100%;
-    height: 470%;
+  top: 4%;
+  right: -147%;
+  transform: translateY(-50%);
+  width: 90%;
+  height: 472%;
   }
