--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 .divConnexion {
-    bottom: 250px;
+    bottom: 400px;
     position: absolute;
     left: 100px;
     gap: 50px;
